feat: delete image
